src/syntax/parser/snapshots/hebi__syntax__parser__tests__assign_expr-2.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        name: "b",
                    },
                    value: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        name: "b",
                    },
                    value: Binary(
                        Binary {
                            op: Add,
                            left: GetField(
                                GetField {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    name: "b",
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        name: "b",
                    },
                    value: Binary(
                        Binary {
                            op: Sub,
                            left: GetField(
                                GetField {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    name: "b",
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        name: "b",
                    },
                    value: Binary(
                        Binary {
                            op: Div,
                            left: GetField(
                                GetField {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    name: "b",
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        name: "b",
                    },
                    value: Binary(
                        Binary {
                            op: Mul,
                            left: GetField(
                                GetField {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    name: "b",
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        name: "b",
                    },
                    value: Binary(
                        Binary {
                            op: Rem,
                            left: GetField(
                                GetField {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    name: "b",
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        name: "b",
                    },
                    value: Binary(
                        Binary {
                            op: Pow,
                            left: GetField(
                                GetField {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    name: "b",
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        name: "b",
                    },
                    value: Binary(
                        Binary {
                            op: Maybe,
                            left: GetField(
                                GetField {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    name: "b",
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
    ],
}
