src/syntax/parser/snapshots/hebi__syntax__parser__tests__assign_expr-3.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31m=[0m b


