src/syntax/parser/snapshots/hebi__syntax__parser__tests__assign_expr-5.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
invalid variable declaration
| [4;31ma.b :=[0m


