src/syntax/parser/snapshots/hebi__syntax__parser__tests__assign_expr.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            SetVar(
                SetVar {
                    target: GetVar {
                        name: Ident(
                            "a",
                        ),
                    },
                    value: GetVar(
                        GetVar {
                            name: Ident(
                                "b",
                            ),
                        },
                    ),
                },
            ),
        ),
        Var(
            Var {
                name: Ident(
                    "a",
                ),
                value: GetVar(
                    GetVar {
                        name: Ident(
                            "b",
                        ),
                    },
                ),
            },
        ),
        Expr(
            SetVar(
                SetVar {
                    target: GetVar {
                        name: Ident(
                            "a",
                        ),
                    },
                    value: Binary(
                        Binary {
                            op: Add,
                            left: GetVar(
                                GetVar {
                                    name: Ident(
                                        "a",
                                    ),
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetVar(
                SetVar {
                    target: GetVar {
                        name: Ident(
                            "a",
                        ),
                    },
                    value: Binary(
                        Binary {
                            op: Sub,
                            left: GetVar(
                                GetVar {
                                    name: Ident(
                                        "a",
                                    ),
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetVar(
                SetVar {
                    target: GetVar {
                        name: Ident(
                            "a",
                        ),
                    },
                    value: Binary(
                        Binary {
                            op: Div,
                            left: GetVar(
                                GetVar {
                                    name: Ident(
                                        "a",
                                    ),
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetVar(
                SetVar {
                    target: GetVar {
                        name: Ident(
                            "a",
                        ),
                    },
                    value: Binary(
                        Binary {
                            op: Mul,
                            left: GetVar(
                                GetVar {
                                    name: Ident(
                                        "a",
                                    ),
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetVar(
                SetVar {
                    target: GetVar {
                        name: Ident(
                            "a",
                        ),
                    },
                    value: Binary(
                        Binary {
                            op: Rem,
                            left: GetVar(
                                GetVar {
                                    name: Ident(
                                        "a",
                                    ),
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetVar(
                SetVar {
                    target: GetVar {
                        name: Ident(
                            "a",
                        ),
                    },
                    value: Binary(
                        Binary {
                            op: Pow,
                            left: GetVar(
                                GetVar {
                                    name: Ident(
                                        "a",
                                    ),
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
        Expr(
            SetVar(
                SetVar {
                    target: GetVar {
                        name: Ident(
                            "a",
                        ),
                    },
                    value: Binary(
                        Binary {
                            op: Maybe,
                            left: GetVar(
                                GetVar {
                                    name: Ident(
                                        "a",
                                    ),
                                },
                            ),
                            right: GetVar(
                                GetVar {
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
    ],
}
