src/syntax/parser/snapshots/hebi__syntax__parser__tests__binary_expr-10.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Binary(
    Binary {
        op: MoreEq,
        left: GetVar(
            GetVar {
                name: Ident(
                    "a",
                ),
            },
        ),
        right: GetVar(
            GetVar {
                name: Ident(
                    "b",
                ),
            },
        ),
    },
)
