src/syntax/parser/snapshots/hebi__syntax__parser__tests__binary_expr-12.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Binary(
    Binary {
        op: LessEq,
        left: GetVar(
            GetVar {
                name: "a",
            },
        ),
        right: GetVar(
            GetVar {
                name: "b",
            },
        ),
    },
)
